--- a/app/views/transactions/show.html.haml
+++ b/app/views/transactions/show.html.haml
@@ -15,6 +15,12 @@
   %b= t 'formtastic.labels.transaction.bank'
   = @transaction.bank
 %p
+  %b= t 'formtastic.labels.transaction.account_name'
+  = @transaction.account_name
+%p
+  %b= t 'formtastic.labels.transaction.point'
+  = @transaction.point
+%p
   %b= t 'formtastic.labels.transaction.trade_time'
   = @transaction.trade_time
 %p
