--- a/app/views/transactions/_trans.html.haml
+++ b/app/views/transactions/_trans.html.haml
@@ -10,6 +10,8 @@
       - if session[:transaction_mode] != 'sales'
         %th= t 'transaction.owner'
         %th= t 'transaction.sales'
+        %th= t 'formtastic.labels.transaction.account_name'
+        %th= t 'formtastic.labels.transaction.point'
       %th= t 'formtastic.labels.transaction.trade_time' 
       %th= t 'formtastic.labels.transaction.description' 
       %th
@@ -25,6 +27,8 @@
             = transaction.user.username if transaction.user
           %td
             = link_to transaction.sales.username, :controller => 'account', :action => 'business', :id => transaction.sales if transaction.sales
+          %td= transaction.account_name
+          %td= transaction.point
         %td= l transaction.trade_time, :format => :long
         %td= transaction.description
         %td
