update participant set default style

--- a/app/views/account/_tasklogs.html.haml
+++ b/app/views/account/_tasklogs.html.haml
@@ -7,8 +7,8 @@
       - if session[:view_log] == 'admin'
         %th UID
         %th= t 'task.owner' 
-      %th WID
-      %th= t 'task.worker'
+        %th WID
+        %th= t 'task.worker'
       %th= t 'global.price'
       %th= t 'formtastic.labels.task.status'
       %th= t 'formtastic.labels.task.description'
@@ -27,8 +27,11 @@
       - if session[:view_log] == 'admin'
         %td= t.user_id
         %td= t.user_name
-      %td= t.worker_id
-      %td= t.worker_name
+        %td= t.worker_id
+        %td= t.worker_name
+      - u = User.find(t.worker_id)
+      - if u
+        %td= link_to u.username, u
       %td= t.price
       %td= t.status
       %td= t.description
