--- a/app/views/participants/_parts.html.haml
+++ b/app/views/participants/_parts.html.haml
@@ -16,7 +16,6 @@
         %th= t 'formtastic.labels.participant.status'
         %th= t 'formtastic.labels.participant.active'
         %th= t 'global.task'
-        %th= t 'global.created_at'
         %th
     - @participants.each do |participant|
       %tr
@@ -24,10 +23,12 @@
         %td= participant.part_id
         %td= participant.local_status
         %td
-          = convert_yes_no(participant.active)
-          = link_to image_tag('yes.png', :alt=>t('participant.make_active')), {:controller=>'board', :action=>'active_participant', :id=>participant.id}, {:title=>t('participant.make_active')} unless participant.active
+          = #convert_yes_no(participant.active)
+          - if participant.active
+            = image_tag('yes.png') 
+          - else
+            = link_to t('participant.make_active'), {:controller=>'board', :action=>'active_participant', :id=>participant.id}, {:title=>t('participant.make_active')}
         %td= participant.tasks.length
-        %td= l participant.created_at, :format => :short
         %td
           = link_to image_tag('view.png'), participant, {:title=>t('global.show')}
           - if admin?
@@ -45,7 +46,6 @@
         %th= t 'formtastic.labels.participant.status'
         %th= t 'formtastic.labels.participant.active'
         %th= t 'global.task'
-        %th= t 'global.created_at'
         %th
     - @shops.each do |participant|
       %tr
@@ -53,10 +53,12 @@
         %td= participant.part_id
         %td= participant.local_status
         %td
-          = convert_yes_no(participant.active)
-          = link_to image_tag('yes.png', :alt=>t('participant.make_active')), {:controller=>'board', :action=>'active_participant', :id=>participant.id}, {:title=>t('participant.make_active')} unless participant.active
+          = #convert_yes_no(participant.active)
+          - if participant.active
+            = image_tag('yes.png') 
+          - else
+            = link_to t('participant.make_active'), {:controller=>'board', :action=>'active_participant', :id=>participant.id}, {:title=>t('participant.make_active')}
         %td= participant.tasks.length
-        %td= l participant.created_at, :format => :short
         %td
           = link_to image_tag('view.png'), participant, {:title=>t('global.show')}
           - if admin?
