update finance function, and reduce approve process

--- a/app/views/account/charge.html.haml
+++ b/app/views/account/charge.html.haml
@@ -1,20 +1,20 @@
 .solidshape
   = render 'account/user'
 
-#mainframe
+#wide
   .bordershape
     - form_tag( {:action=>'process_charge'}, :id=>'charge') do
       = label_tag t('trade.transaction_id')
-      = text_field_tag 'transaction_id'
+      = text_field_tag 'transaction_id', '', :class=>"validate[required]"
       %br
       = label_tag t('account.charge_amount')
       =# select_tag 'amount', options_for_select([100,200,300,500,800,1000,2000]), :class=>"validate[require],custom[number],min[100],max[2000]"
       = number_field_tag 'amount', 100, :class=>"validate[required],custom[number],min[1],max[2000]"
       %br
       = submit_tag t('account.charge')
-
-#right
-  #roundshape
-    %p= t 'trade.must_input'
-    %hr
-    %p= t 'trade.bad_deal'
+/
+  #right
+    #roundshape
+      %p= t 'trade.must_input'
+      %hr
+      %p= t 'trade.bad_deal'
