--- a/app/views/transactions/_form.html.haml
+++ b/app/views/transactions/_form.html.haml
@@ -15,7 +15,7 @@
       = f.input :amount, :input_html => { :class => "validate[required], min[0.01]" }
       = f.input :bank
       - if session[:operate_mode] != 'edit'
-        = f.autocompleted_input :account_name, :url => autocomplete_user_username_transactions_path
+        = f.autocompleted_input :account_name, :url => autocomplete_user_username_transactions_path, :input_html => { :class => "validate[required], minSize[6]" }
         = f.input :point, :input_html => { :class => "custom[number],min[0.01]" }
       = f.input :trade_time
       = f.input :description
