--- a/app/views/account/_trades.html.haml
+++ b/app/views/account/_trades.html.haml
@@ -31,7 +31,10 @@
       %td
         - if t.request?
           - if admin?# or manager?)
-            = link_to image_tag('ok.png', :alt=>t('trade.approve')), :controller=>'account', :action=>'approve_pass', :id=>t
+            - if t.trade_type != 'charge'
+              = link_to image_tag('ok.png', :alt=>t('trade.approve')), :controller=>'account', :action=>'approve_pass', :id=>t
+            - else
+              = link_to image_tag('ok.png', :alt=>t('trade.approve')), :controller=>'account', :action=>'approve_charge', :id=>t
             = link_to image_tag('no.png', :alt=>t('trade.reject')), :controller=>'account', :action=>'approve_reject', :id=>t
           =# link_to image_tag('delete.png', :alt=>t('global.delete')), :controller => 'account', :action => 'delete_charge', :id=>t, :confirm => 'delete?'
           = link_to image_tag('delete.png'), t, :confirm => t('site.are_you_sure'), :method => :delete
