--- a/app/views/account/_tradelogs.html.haml
+++ b/app/views/account/_tradelogs.html.haml
@@ -6,7 +6,7 @@
       - if session[:view_log] == 'admin'
         %th UID
         %th= t 'site.login_name'
-      %th ID
+      %th TID
       %th= t 'manage.service'
       %th= t 'trade.amount'
       %th= t 'global.type'
