--- a/app/views/transactions/show.html.haml
+++ b/app/views/transactions/show.html.haml
@@ -15,11 +15,17 @@
   %b= t 'formtastic.labels.transaction.bank'
   = @transaction.bank
 %p
+  %b= t 'formtastic.labels.transaction.pay_type'
+  = @transaction.local_pay_type
+%p
   %b= t 'formtastic.labels.transaction.account_name'
   = @transaction.account_name
 %p
   %b= t 'formtastic.labels.transaction.point'
   = @transaction.point
+%p
+  %b= t 'transaction.sales'
+  = @transaction.sales.username if @transaction.sales
 %p
   %b= t 'formtastic.labels.transaction.trade_time'
   = @transaction.trade_time
