--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -88,8 +88,10 @@
         = @task.worker_part_name
         = link_to "http://amos1.taobao.com/msg.ww?v=2&uid=#{@task.worker_part_name}&s=2", :target=>'_black' do
           = image_tag("http://amos1.taobao.com/online.ww?v=2&uid=#{@task.worker_part_name}&s=2", :alt=>'点击这里给我发消息')
+        %br
       - if @task.worker.im_q
         = link_to "tencent://message/?uin=#{@task.worker.im_q}&Site=&Menu=yes", :target=>'_black' do
+          = "QQ:#{@task.worker.im_q}"
           = image_tag("http://wpa.qq.com/pa?p=1:#{@task.worker.im_q}:4", :alt=>'点击这里给我发消息')
 
     %hr
