--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,6 +38,13 @@
         - if user_signed_in?
           =t('site.welcome', :name => current_user.username)
           |
+          - messages = current_user.message_boxes.where(:status => 'unread').order("created_at DESC")
+          - if messages.length > 0
+            - if messages.length == 1
+              = link_to image_tag('message.png') + messages.length.to_s + t('message.message_tail'), :controller => 'board', :action => 'view_message', :id => messages.first.message
+            - else
+              = link_to image_tag('message.png') + messages.length.to_s + t('message.message_tail'), '/m/message'
+          |
           = link_to t('site.profile'), edit_user_registration_path
           |
           = link_to t('site.logout'), destroy_user_session_path
@@ -106,8 +113,7 @@
                   = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
                 .sub_menu
                   - if admin?
-                    = link_to t('site.user_manage'), users_path
-                    %hr
+                    =# link_to t('site.user_manage'), users_path
                     = link_to t('site.cash_task'), :controller=>'board', :action=>'task_list', :task_type => 'cash'
                     = link_to t('site.big_cash'), '/t/big_cash'
                     = link_to t('trade.manage_payment'), '/m/approve/charge'
@@ -120,11 +126,11 @@
                   = link_to t('site.accountlog_center'), '/t/accountlogs'
                   %hr
                   - if admin?
-                    = link_to t('notice.new_notice'), new_notice_url
-                    = link_to t('article.new_article'), new_article_url
-                    = link_to t('system.message'), '/s/message'
-                    %hr
+                    =# link_to t('notice.new_notice'), new_notice_url
+                    =# link_to t('article.new_article'), new_article_url
                     = link_to t('site.finance_center'), transactions_url
+                    %hr
+                    = link_to t('system.message'), '/s/message'
                     %hr
                     = link_to t('site.setting'), '/s/setting'
 
@@ -175,43 +181,9 @@
       #space-right
         %br
 
-      /
-        #site-bar
-          %ul
-            %li{:title=>'Home'}
-              = link_to image_tag('home.png'), '/'
-          %span.jx-separator-left          
-          - if user_signed_in?
-            %ul.jx-bar-button-left
-              - messages = current_user.message_boxes.where(:status => 'unread').order("created_at DESC")
-              - if messages.length > 0
-                %li
-                  - if messages.length == 1
-                    = image_tag 'mail.png', :alt=>''
-                    = link_to messages.first.message.title, :controller => 'board', :action => 'view_message', :id => messages.first.message
-                  - else
-                    = image_tag 'mail.png', :alt=>''
-                    = link_to t('message.total_message', :total => messages.length), '/m/message'
-            %span.jx-separator-left
-            %ul
-              %li
-                = link_to t('site.todo_num')+current_user.status_todos('running').length.to_s, '/task_show/todo'
-              %li
-                = link_to t('site.task_num')+current_user.status_tasks('published').length.to_s, '/task_show/task'
-          %span.jx-separator-left
-          %ul.jx-bar-button-right
-            %li
-              = link_to "#{t('site.copyright')}©#{t('site.name')}", '/'
-          %span.jx-separator-right
       - if user_signed_in?
         .visibleDiv
         #bottomRight
-          - messages = current_user.message_boxes.where(:status => 'unread').order("created_at DESC")
-          - if messages.length > 0
-            - if messages.length == 1
-              = link_to image_tag('message.png') + messages.length.to_s + t('message.message_tail'), :controller => 'board', :action => 'view_message', :id => messages.first.message
-            - else
-              = link_to image_tag('message.png') + messages.length.to_s + t('message.message_tail'), '/m/message'
           = image_tag 'todo.png'
           = link_to t('site.todo_num')+current_user.status_todos('running').length.to_s, '/task_show/todo'
           = image_tag 'tasks.png'
