--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -48,4 +48,4 @@
     = label_tag t('account.operate_password')
     = password_field_tag :operate_password
     = t('account.operate_password_desc')
-    = f.commit_button
+    = f.commit_button t('site.new_task')
