update to rails 3.0.9

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
     = javascript_include_tag 'jquery.validationEngine-zh'
     = stylesheet_link_tag 'validationEngine.jquery'
 
-    = javascript_include_tag 'rails'
+    =# javascript_include_tag 'rails'
     = stylesheet_link_tag 'formtastic','formtastic_changes'
     = formtastic_stylesheet_link_tag
     = include_tiny_mce_if_needed
