fix bugs that user can not take virtual task

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head 
     %title= t 'site.name' 
     = favicon_link_tag
+    = javascript_include_tag :defaults
     = csrf_meta_tag
     = javascript_include_tag 'jquery.min.js'
 
