--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -42,7 +42,7 @@
       %th= t 'account.score'
       %th= 'IP' #t 'global.status' 
       %th= t 'account.account_manage'
-      %th{:colspan=>4}= t 'global.operation'
+      %th{:colspan=>3}= t 'global.operation'
 
   - @users.each do |user|
     - c = cycle("even", "odd")
@@ -52,12 +52,15 @@
       %td= user.username
       %td
         = user.role_objects.collect{|r| r.name[0..3]}.join(' ')
+        = "(#{t('account.not_approved')})" if user.has_role? 'guest'
       %td= user.account_money
       %td= user.account_credit
       %td= user.score
       %td= user.last_sign_in_ip
       %td
-        - if manager?
+        - if admin? or manager? or superadmin?
+          - if superadmin?
+            = link_to image_tag('state.png', :alt=>t('global.status')), :controller => 'account', :action => 'user_state', :id => user
           = link_to image_tag('point.png', :alt=>t('account.point')), :controller => 'account', :action => 'point', :id => user
           = link_to image_tag('password.png', :alt=>t('site.password')), :controller => 'account', :action => 'password', :id => user
           = link_to image_tag('role.png', :alt=>t('account.role')), :controller => 'account', :action => 'role', :id => user
@@ -69,7 +72,5 @@
         - if superadmin?
           = link_to image_tag('edit.png', :alt=>t('global.edit')), edit_user_path(user)
           = link_to image_tag('delete.png', :alt=>t('global.delete')), user, :confirm => t('site.are_you_sure'), :method => :delete
-      %td
-        = t('account.not_approved') if user.has_role? 'guest'
 
 = will_paginate @users
